--- a/css/style.css
+++ b/css/style.css
@@ -147,20 +147,32 @@ p {
     background-color: #d8ffe1;
     padding: 0;
     display: grid;
-    grid-template-areas: "promo-img";
-    grid-template-rows: auto;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     gap: 0;
     align-items: center;
     justify-items: center;
 }
 
-.promo-img {
-    grid-area: promo-img;
-    display: grid;
-    height: 35vh;
-    align-self: center;
-    justify-self: center;
+.promo img {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.promo-msg {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    z-index: 1;
+    background-color: rgba(41, 37, 87, 0.7);
+    border-radius: 10px;
+    text-align: right;
+    margin-left: 20%;
+    position: relative;
+    top: 1em;
+    right: -1em;
 }
 /*
 .promo-img div {
@@ -280,5 +292,38 @@ footer {
         grid-template-areas: 
             "footer-left footer-right";
         grid-template-columns: 1fr 1fr;
+    }
+
+    .promo {
+        background-color: #d8ffe1;
+        padding: 0;
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        gap: 0;
+        align-items: center;
+        justify-items: center;
+    }
+    
+    .promo img {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .promo-msg {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+        z-index: 1;
+        background-color: rgba(41, 37, 87, 0.7);
+        border-radius: 10px;
+        text-align: right;
+        margin-left: 30%;
+        padding: 1em;
+        position: relative;
+        top: -20%;
+        right: 1em;
     }
 }
